ribbit/tests/ui/opaque_size.stderr
error: Opaque type requires size attribute #[ribbit(size = ...)]
  --> tests/ui/opaque_size.rs:10:12
   |
10 |     inner: Inner,
   |            ^^^^^
